--- a/app/views/servers/show.html.haml
+++ b/app/views/servers/show.html.haml
@@ -10,4 +10,5 @@
   - if can? :edit, resource
     = edit_resource_button
   - if can? :destroy, resource
-    = delete_resource_button
+    %div{ :style => "float: right" }
+      = delete_resource_button
