Added a link to generate password

--- a/app/views/server_data/passwords/_fields.html.haml
+++ b/app/views/server_data/passwords/_fields.html.haml
@@ -22,6 +22,7 @@
         %td
           - begin
             = f.text_field :password
+            = link_to_generate_password "generate", f
           - rescue OpenSSL::Cipher::CipherError => e
             = e.inspect
       %tr
